tests/fixtures/type_err/recursive_alias.reconf
type Loop = Loop;

1
